--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Barber Shop Bootstrap Template Grafreez</title>
+	<title>BSB Microgreen</title>
 </head>
 <!-- bootstrap Style CSS File -->
 <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -24,7 +24,7 @@
 <!-- Top navigation -->
 <nav class="navbar navbar-expand-md fixed-top top-nav">
 	<div class="container-fluid">
-		  <a class="navbar-brand" href="index.html"><strong>Grafreez</strong></a>
+		  <a class="navbar-brand" href="index.html"><strong>bsbmicrogreen</strong></a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"><img src="img/icons/menu.png"></span>
 		  </button>
@@ -65,21 +65,21 @@
 		<div class="row">
 			<div class="col-lg-6 col-md-12 caption-two-panel ml-auto pt-5">
 				<div class="intro-caption mt-5">
-				<h1 class="text-white mb-2">It's not really hard to stand out in crowd</h1>
-				<p class="text-white mb-4"> These are the voyages of the Starship Enterprise. Its five-year mission: to explore strange new worlds, to seek out new life and new civilizations, to boldly go where no man has gone before.</p>
-				<a class="btn btn-primary text-white mr-3">Explore More</a>
+				<h1 class="text-white mb-2">Mudamos a forma como o mundo se alimenta.</h1>
+				<h2 class="text-white mb-4">Os vegetais mais frescos que você vai ter! Saudáveis, locais e sustentáveis.</h2>
+				<a class="btn btn-primary text-white mr-3">Quer receber Microgreens Vivos na sua casa?</a>
 			</div>
 		</div>
 	</div>
 </section>
 
 <!-- Info block 1 -->
-<section id="services" class="info-section text-white bg-right bg-dark">
+<section id="services" class="info-section bg-right bg-white">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8">
 				<div class="head-box">
-					<h2 class="font-abril ">Services We offered!</h2>
+					<h2 class="font-abril ">Nossos microverdes</h2>
 				</div>
 				<div class="three-panel-block mt-5">
 					<div class="row">
