Adiciona icones e carrossel em nossos microverdes

--- a/index.html
+++ b/index.html
@@ -85,30 +85,95 @@
 					<div class="row">
 						<div class="col-lg-6 col-md-6 col-sm-6">
 							<div class="service-block mb-5">
-								<i class="icon-box mb-3 float-left w-100"><img src="img/icons/scissors.png" class="img-fluid"></i>
-								<h3 class="text-primary">Scissor Cut</h3>
+								<i class="icon-box mb-3 float-left w-100"><img src="img/icons/brotar-white.png" class="img-fluid"></i>
+								<h3 class="text-primary">Rabanete</h3>
 								<p>Never in all their history have men been able truly to conceive of the world as one a single sphere</p>
 							</div>
 						</div>
 						<div class="col-lg-6 col-md-6 col-sm-6">
 							<div class="service-block mb-5">
-								<i class="icon-box mb-3 float-left w-100"><img src="img/icons/razor-1.png" class="img-fluid"></i>
-								<h3 class="text-primary">Razor Cut</h3>
+								<i class="icon-box mb-3 float-left w-100"><img src="img/icons/brotar-simple.png" class="img-fluid"></i>
+								<h3 class="text-primary">Repolho roxo</h3>
 								<p>Never in all their history have men been able truly to conceive of the world as one a single sphere</p>
 							</div>
 						</div>
 						<div class="col-lg-6 col-md-6 col-sm-6">
 							<div class="service-block mb-5">
-								<i class="icon-box mb-3 float-left w-100"><img src="img/icons/brush.png" class="img-fluid"></i>
-								<h3 class="text-primary">Head Shave</h3>
+								<i class="icon-box mb-3 float-left w-100"><img src="img/icons/brotos.png" class="img-fluid"></i>
+								<h3 class="text-primary">Mostarda</h3>
 								<p>Never in all their history have men been able truly to conceive of the world as one a single sphere</p>
 							</div>
 						</div>
 						<div class="col-lg-6 col-md-6 col-sm-6">
 							<div class="service-block">
-								<i class="icon-box mb-3 float-left w-100"><img src="img/icons/hair-clip.png" class="img-fluid"></i>
-								<h3 class="text-primary">Clipper Cut</h3>
+								<i class="icon-box mb-3 float-left w-100"><img src="img/icons/brotar-2.png" class="img-fluid"></i>
+								<h3 class="text-primary">Coentro</h3>
 								<p>Never in all their history have men been able truly to conceive of the world as one a single sphere</p>
+							</div>
+						</div>
+						<div class="col-lg-6 col-md-6 col-sm-6">
+							<div class="service-block">
+								<i class="icon-box mb-3 float-left w-100"><img src="img/icons/brotar-white.png" class="img-fluid"></i>
+								<h3 class="text-primary">Couve</h3>
+								<p>Never in all their history have men been able truly to conceive of the world as one a single sphere</p>
+							</div>
+						</div>
+						<div class="col-lg-6 col-md-6 col-sm-6">
+							<div class="service-block">
+								<i class="icon-box mb-3 float-left w-100"><img src="img/icons/brotos.png" class="img-fluid"></i>
+								<h3 class="text-primary">Rúcula</h3>
+								<p>Never in all their history have men been able truly to conceive of the world as one a single sphere</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="carousel-container">
+				<div class="single-testimonial">
+
+					<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+						<div class="carousel-inner " role="listbox">
+							<div class="carousel-item active">
+								<div class="testimonial-box text-center">
+									<div class="testimonial-content bg-faded">
+										<img src="img/1.png" width="300px" height="450px">
+									</div>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<div class="testimonial-box text-center">
+									<div class="testimonial-content w-100 bg-faded">
+										<img src="img/2.png" width="300px" height="450px">
+									</div>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<div class="testimonial-box text-center">
+									<div class="testimonial-content w-100 bg-faded">
+										<img src="img/3.png" width="300px" height="450px">
+									</div>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<div class="testimonial-box text-center">
+									<div class="testimonial-content w-100 bg-faded">
+										<img src="img/4.png" width="300px" height="450px">
+									</div>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<div class="testimonial-box text-center">
+									<div class="testimonial-content w-100 bg-faded">
+										<img src="img/5.png" width="300px" height="450px">
+									</div>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<div class="testimonial-box text-center">
+									<div class="testimonial-content w-100 bg-faded">
+										<img src="img/6.png" width="300px" height="450px">
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -291,6 +356,7 @@
 <div class="copy-footer bg-primary py-2">
 	<div class="container text-center text-light">
 		&copy; <a href="http://grafreez.com" target="_blank">Grafreez.com</a> <span id="year"></span>. All rights reserved. Created with <i class="fa fa-heart"></i>
+		Ícones feitos por <a href="https://www.flaticon.com/br/autores/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/br/" title="Flaticon"> www.flaticon.com</a>
 	</div>
 </div>
 
