adiciona terceira section e muda cores básicas

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <!-- Top navigation -->
 <nav class="navbar navbar-expand-md fixed-top top-nav">
 	<div class="container-fluid">
-		  <a class="navbar-brand" href="index.html"><strong>bsbmicrogreen</strong></a>
+		  <a class="navbar-brand" href="index.html"><i class="logo"><img class = "logo" src="img/redonda1.png" class="img-fluid"></i><strong> bsbmicrogreen</strong></a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"><img src="img/icons/menu.png"></span>
 		  </button>
@@ -32,30 +32,30 @@
 		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		    <ul class="navbar-nav m-auto text-sm-center text-md-center">
 		      <li class="nav-item">
-		        <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+		        <a class="nav-link" href="#home">Início <span class="sr-only">(current)</span></a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#services">Services</a>
+		        <a class="nav-link" href="#services">Nossos produtos</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#about">About</a>
+		        <a class="nav-link" href="#about">Sobre</a>
 		      </li>
-		      <li class="nav-item">
+		      <!--<li class="nav-item">
 		        <a class="nav-link" href="#price">Prices</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="#testimonial">Testimonials</a>
-		      </li>
+		      </li>-->
 		      <li class="nav-item">
-		        <a class="nav-link" href="#contact">Contact</a>
+		        <a class="nav-link" href="#contact">Contato</a>
 		      </li>
 		    </ul>
 		  </div>	
-		  <ul class="navbar-nav ml-auto search-box">
+		  <!--<ul class="navbar-nav ml-auto search-box">
 		    <li class="nav-item">
 		      <a class="nav-link" href="#"><i class="fa fa-search text-white"></i></a>
 		    </li>
-		  </ul>
+		  </ul>-->
 	</div>
 </nav>
 
@@ -67,7 +67,8 @@
 				<div class="intro-caption mt-5">
 				<h1 class="text-white mb-2">Mudamos a forma como o mundo se alimenta.</h1>
 				<h2 class="text-white mb-4">Os vegetais mais frescos que você vai ter! Saudáveis, locais e sustentáveis.</h2>
-				<a class="btn btn-primary text-white mr-3">Quer receber Microgreens Vivos na sua casa?</a>
+				<p class="text-white mb-2">Quer receber Microgreens Vivos na sua casa?</p>
+				<a class="btn btn-primary text-white mr-3" href="#contact">Vá em frente, coma melhor</a>
 			</div>
 		</div>
 	</div>
@@ -190,8 +191,8 @@
 		<div class="row">
 			<div class="col-lg-5 col-md-12 copy-container ml-auto">
 				<div class="copy-content pr-4">
-					<h2 class="font-abril text-primary">
-						Who We Are
+					<h2 class="font-abril text-sec">
+						Microgreens ou Microverdes
 					</h2>
 					<p class="lead ml-2">
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -209,7 +210,7 @@
 </section>
 
 <!-- Info block 2 -->
-<section id="price" class="info-section sec-bg-03 bg-overlay">
+<!--<section id="price" class="info-section sec-bg-03 bg-overlay">
 	<div class="container text-white">
 		<div class="head-box text-center mb-5">
 			<h2 class="font-abril">Our Jaw Drop Prices</h2>
@@ -247,11 +248,11 @@
 			</div>
 		</div>
 	</div>
-</section>
+</section>-->
 
 
 <!-- Testimonial Block 01-->
-<section id="testimonial" class="testimonial-section sec-bg-04 py-5 h-100">
+<!--<section id="testimonial" class="testimonial-section sec-bg-04 py-5 h-100">
 	<div class="container">
 		<div class="row">
 			<div class="head-box text-center mb-3 col-md-12 mt-5">
@@ -299,7 +300,7 @@
 		  </div>
 		</div>
 	</div>
-</section>
+</section>-->
 
 <!-- Contact Block -->
 <section id="contact" class="contact-section h-100 bg-dark">
@@ -356,6 +357,7 @@
 <div class="copy-footer bg-primary py-2">
 	<div class="container text-center text-light">
 		&copy; <a href="http://grafreez.com" target="_blank">Grafreez.com</a> <span id="year"></span>. All rights reserved. Created with <i class="fa fa-heart"></i>
+		<br />
 		Ícones feitos por <a href="https://www.flaticon.com/br/autores/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/br/" title="Flaticon"> www.flaticon.com</a>
 	</div>
 </div>
